backend/test/resources/invalid/cyclic_simple_target_not_reachable.lgf
@nodes
label type ref
0 0 19
1 20 2
2 0 34
3 0 25
@arcs
    condition
0 1 ""
1 2 ""
2 3 ""
3 1 ""
@attributes
target 3
